[project]
name = "dlfm"
version = "0.0.0"
description = "Multi-convex programming for discrete latent factor models prototyping."
authors = [
    {name = "Hao Zhu", email = "zhuh@cs.uni-freiburg.de"},
    {name = "Shengchao Yan"},
    {name = "Jasper Hoffmann"},
    {name = "Joschka Boedecker"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvxpy>=1.6.4",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
